[project]
name = "GALE-Encyclopedia-of-Medicine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=1.1.7",
    "langchain-pinecone>=0.2.13",
    "pinecone-client>=6.0.0",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
]
